get dealer book
