# Dealer/routes/dealer.js
@@ -19,7 +19,7 @@ router.get("/dealers",[verifyToken], dealerController.getAllDealers); // get dea
 router.get("/getDealerById/:dealerId", [verifyToken], dealerController.getDealerById); //get dealer detail with ID
 router.get("/getUserByDealerId/:dealerId", [verifyToken], dealerController.getUserByDealerId); //get dealer detail with ID
 router.get("/dealerPriceBooks",[verifyToken],dealerController.getAllDealerPriceBooks);
-router.post("/changeDealerStatus/:dealerId",[verifyToken],validator('change_status_dealer'),dealerController.changeDealerStatus);
+router.put("/changeDealerStatus/:dealerId",[verifyToken],validator('change_status_dealer'),dealerController.changeDealerStatus);
 router.get("/getDealerPriceBookById/:dealerPriceBookId",[verifyToken],dealerController.getDealerPriceBookById);
 router.get("/getDealerPriceBookByDealerId/:dealerId",[verifyToken],dealerController.getDealerPriceBookByDealerId);
 router.get("/getDealerRequest",[verifyToken],dealerController.getDealerRequest);
